--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -14,7 +14,11 @@
                 <li><a href="/products">Categorias</a></li>
                 <li><a href="/users/login">Ofertas</a></li>
                 <li><a href="#footer">Contacto</a></li>
-                <li><a href="/admin">Administracion</a></li>
+                <% if (locals.userLog) { %>
+                    <% if (locals.userLog.category === "admin") { %>
+                        <li><a href="/admin">Administracion</a></li>
+                    <% } %>
+                <% } %>
             </ol>
         </nav>
         <div class="botones">
@@ -27,8 +31,9 @@
                 <i class="fas fa-search"></i>
             </div>
             <% if (locals.isLogged) { %>
-                <div class="avatar">
+                <div class="avatar" onclick="document.getElementById('logout').style.display = 'block'">
                     <img src="/img/users/<%= locals.userLog.image %> " alt="">
+                    <li id="logout"><a href="/users/logout">Cerrar sesion</a></li>
                 </div>
             <% } else { %> 
             <div>
