correccion de header

--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -38,7 +38,7 @@
                   </div>
             </div>
             </div>
-            <span>No recuerdas tu contraseña? <a href="">click aca</a></span>
+            <!-- <span>No recuerdas tu contraseña? <a href="">click aca</a></span> -->
             <div><button type="submit" class="btn btn-primary" style="margin: 20px auto; display: flex; justify-content: center; flex-direction: column; align-items: center;">Ingresar</button></div>
           </form>
             
