--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -12,7 +12,7 @@
             <ol class="ol">
                 <li><a href="/products">Productos</a></li>
                 <li><a href="/products">Categorias</a></li>
-                <li><a href="/users/login">Ofertas</a></li>
+                <!-- <li><a href="/users/login">Ofertas</a></li> -->
                 <li><a href="#footer">Contacto</a></li>
                 <% if (locals.userLog) { %>
                     <% if (locals.userLog.category === "admin") { %>
@@ -37,7 +37,7 @@
                 </div>
             <% } else { %> 
             <div>
-                <a href="/users/register">
+                <a href="/users/login">
                     <i class="fas fa-user"></i>
                 </a>
             </div>
