--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -19,22 +19,19 @@
         </div>
         <form method="POST">
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
-              <input type="email" name="email" value="<%= locals.old && old.email ? old.email : null %> " class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <% if (locals.errors && errors.email) { %>
-               <span class="error"><%= errors.email.msg %></span>
-              <% } %>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-              <input type="password" name="password" class="form-control" id="exampleInputPassword1">
-              <% if (locals.errors && errors.password) { %>
-                <span class="error"><%= errors.password.msg %></span>
-               <% } %>
-            </div>
-            <div class="d-flex justify-content-end" style="flex-direction: column; align-items: center;">
-                <div class="mb-3 form-check"> 
-                    <input type="checkbox" name="remenber" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+                <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
+                <input type="email" name="email" value="<%= locals.old && old.email ? old.email : null %> " class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                    <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="d-flex justify-content-end" style="flex-direction: column; align-items: center;">
+                    <% if (locals.errors && errors ) { %>
+                      <span class="error"><%= errors %></span>
+                     <% } %>
+                    <div class="mb-3 form-check"> 
+                        <input type="checkbox" name="remenber" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Recordarme</label>
                   </div>
             </div>
             </div>
