--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -10,4 +10,6 @@
 @import url("register.css");
 @import url("login.css");
 @import url("admin.css");
+@import url('profile.css');
+@import url('edit.css');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
