correciones vista profile

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -19,7 +19,7 @@
                     <% } %>
                 <% } %>
                 <% if (locals.userLog) { %>
-                    <li><a href="/users/profile/<%= locals.userLog.id %>">Perfil</a></li>
+                    <li><a href="/users/profile">Perfil</a></li>
             <% } %>
             </ol>
         </nav>
