--- a/site/src/views/users/profile.ejs
+++ b/site/src/views/users/profile.ejs
@@ -27,7 +27,7 @@
             <div><%= usuario.number %></div>
         <section>
         <div class="edit">
-            <form action="/users/edit/<%= usuario.id %>" method="GET">
+            <form action="/users/edit" method="GET">
                 <button>
                     <i class="fas fa-pen-square"></i>
                 </button>
