--- a/site/src/views/users/edit.ejs
+++ b/site/src/views/users/edit.ejs
@@ -14,7 +14,7 @@
         <div>
             <h6>Datos de usuario</h6>
         </div>
-        <form action="/users/edit/<%= usuario.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+        <form action="/users/edit?_method=PUT" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="exampleInputName1" class="form-label">Nombre</label>
                 <input type="text" name="name" value="<%= usuario.name %>" class="form-control" id="exampleInputName1" aria-describedby="emailHelp">
@@ -30,6 +30,13 @@
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Contraseña</label>
               <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+              <% if (locals.errors && errors ) { %>
+                <span class="error"><%= errors %></span>
+               <% } %>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Nueva contraseña</label>
+              <input type="password" name="newPassword" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3">
                 <label for="exampleInputPhoneNumber1" class="form-label">Número de telefono</label>
