--- a/site/src/views/products/products.ejs
+++ b/site/src/views/products/products.ejs
@@ -14,7 +14,7 @@
                 <div>
                     <a href="/products/detail/<%= product.id %>">
                         <div class="caja">
-                            <img src="/img/<%= product.images[0] %> " alt="">
+                            <img src="/img/<%= product.images[0].file %> " alt="">
                             <article>
                                 <h3><%= product.name %></h3>
                                 <span>$<%= product.price %></span>
