--- a/site/src/views/products/productAdd.ejs
+++ b/site/src/views/products/productAdd.ejs
@@ -33,30 +33,41 @@
                 <select id="category" class="form-select" name="category">
                     <option value="" selected hidden>Seleccione la categoría</option>
             <% categories.forEach(category => { %>
-             <option value="<%= category %>" <%= locals.old && old.category === category ? 'selected' : null%> ><%= category %></option>
+             <option value="<%= category.id %>" <%= locals.old && old.category === category.name ? 'selected' : null%> ><%= category.name %></option>
             <% }) %>
                 </select>
                 <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.category ? errores.category.msg : null %> </span>
               </div>
+
+              <div class="mb-3">
+                <label for="genre" class="form-label">Genero</label>
+
+                <select id="genre" class="form-select" name="genre">
+                    <option value="" selected hidden>Seleccione el genero</option>
+                    <option value="masculino">Hombre</option>
+                    <option value="femenino">Mujer</option>
+                </select>
+              </div>
+
+              <div class="mb-3">
+                <label for="brand" class="form-label">Marca</label>
+
+                <select id="brand" class="form-select" name="brand">
+                    <option value="" selected hidden>Seleccione la marca</option>
+                    <% brands.forEach(brand => { %>
+                      <option value="<%= brand.id %>"><%= brand.name %></option>
+                    <% }) %>
+                </select>
+              </div>
 <!--               <label for="exampleColorInput" class="form-label">Color</label>
 <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#000" title="Choose your color"> -->
                 <label for="formGroupExampleInput" class="form-label">Talles</label><br>
-                <div class="form-check form-check-inline mb-3">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="38">
-                  <label class="form-check-label" for="inlineCheckbox1">38</label>
-                </div>
-                <div class="form-check form-check-inline mb-3">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="39">
-                  <label class="form-check-label" for="inlineCheckbox1">39</label>
-                </div>
-                <div class="form-check form-check-inline mb-3">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="40">
-                  <label class="form-check-label" for="inlineCheckbox1">40</label>
-                </div>
-                <div class="form-check form-check-inline mb-3">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="41">
-                  <label class="form-check-label" for="inlineCheckbox1">41</label>
-                </div>
+                <% sizes.forEach(size => { %>
+                  <div class="form-check form-check-inline mb-3">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="size" value="<%= size.id %>">
+                    <label class="form-check-label" for="inlineCheckbox1"><%= size.size %></label>
+                  </div>
+                <% }) %>
                 <div class="mb-3">
                 <label for="floatingTextarea">Descripción</label>
                 <textarea class="form-control" id="floatingTextarea" name="description" ><%= locals.old && old.description ? old.description : null %></textarea>
