--- a/site/src/views/products/productEdit.ejs
+++ b/site/src/views/products/productEdit.ejs
@@ -30,22 +30,41 @@
     
                 <select id="category" class="form-select" name="category">
                     <% categories.forEach(category => { %>
-                        <option value="<%= category %>" <%= category === product.category ? 'selected' : null %> ><%= category %></option>
+                        <option value="<%= category.id %>" <%= category.id === product.categories.id ? 'selected' : null %> ><%= category.name %></option>
                        <% }) %>
                   </select>
+              </div>
+
+              <div class="mb-3">
+                <label for="genre" class="form-label">Genero</label>
+
+                <select id="genre" class="form-select" name="genre">
+                    <option value="masculino"  <%= product.genre === "masculino" ? 'selected' : null %> >Hombre</option>
+                    <option value="femenino" <%= product.genre === "femenino" ? 'selected' : null %> >Mujer</option>
+                </select>
+              </div>
+
+              <div class="mb-3">
+                <label for="brand" class="form-label">Marca</label>
+
+                <select id="brand" class="form-select" name="brand">
+                    <% brands.forEach(brand => { %>
+                      <option value="<%= brand.id %>" <%= brand.id === product.brands.id ? 'selected' : null %> ><%= brand.name %></option>
+                    <% }) %>
+                </select>
               </div>
     <!--               <label for="exampleColorInput" class="form-label">Color</label>
     <input type="color" class="form-control form-control-color" id="exampleColorInput" title="Choose your color" name="color">
     -->             <label for="formGroupExampleInput" class="form-label">Talles</label><br>
-                    <% talles.forEach(element => { %>
+                    <% sizes.forEach(element => { %>
                         <div class="form-check form-check-inline mb-3">
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="<%= element %>">
-                            <% product.talle.forEach(item => { %>
-                                <% if (element == item) { %>
-                                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="<%= element %>" checked>
+                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="size" value="<%= element.id %>">
+                            <% product.sizes.forEach(item => { %>
+                                <% if (element.id == item.id) { %>
+                                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="size" value="<%= element.id %>" checked>
                                 <% } %>
                             <% }) %>
-                            <label class="form-check-label" for="inlineCheckbox1"><%= element %></label>
+                            <label class="form-check-label" for="inlineCheckbox1"><%= element.size %></label>
                         </div>
                     <% }) %>
                 <div class="mb-3">
