--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -26,8 +26,8 @@
         <div class="botones">
             <div>
                 <div class="barra-de-busqueda">
-                    <form action="">
-                        <input type="text" placeholder="Buscar productos">
+                    <form action="/products/search" class="d-flex" method="GET">
+                        <input name="keywords" type="text" placeholder="Buscar productos">
                     </form>
                 </div>
                 <i class="fas fa-search"></i>
